More pages, more pictures

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,4 +1,6 @@
-$color-primary: #d0192a;
+// $color-primary: #d400ff;
+$color-primary: #c1233a;
+$color-primary-bg: rgba(#b91f2e,.18);
 
 $color-border-gray: #d1d1d1;
 
