--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -89,7 +89,7 @@
         </div>
 
         <section class="row news-item-container">
-          <a class="news-item col-12" href="/news/deephpi">
+          <a class="news-item col-12" href="/news/newdeephpi">
             <div class="row pl-0">
               <div class="col-3 pl-0 my-auto">
                 <img src="http://bioinfo.usu.edu/assets/img/events/PAG-2019/g2.jpg" class="img-fluid">
