--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -2,7 +2,7 @@
 @import '../globals';
 
 
-.nav-option {
+.bs4.nav-option {
   font-weight: 600;
   border-bottom: 4px solid $transparent;
   transition: $time-mid;
@@ -23,22 +23,22 @@
   }
 }
 
-.current .nav-option {
+.bs4.current .nav-option {
   border-bottom: 4px solid $color-primary!important;
 }
 
-.nav-suboption {
+.bs4.nav-suboption {
   font-weight: 500!important;
   color: $color-text-main!important;
   transition: $time-mid;
 
   &:hover {
-    background: #ececec!important;
+    background: #ebebeb!important;
     color: $color-primary!important;
   }
 }
 
-.nav-dropdown {
+.bs4.nav-dropdown {
   padding-top: 0!important;
   padding-bottom: 0!important;
 }
