Lots of changes!

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,8 +1,14 @@
 // $color-primary: #d400ff;
-$color-primary: #c1233a;
+$color-primary-dark: #980f23;
+$color-primary: #c11f36;
+$color-primary-light: #de3951;
+$color-primary-very-light: #f17789;
 $color-primary-bg: rgba(#b91f2e,.18);
 
 $color-border-gray: #d1d1d1;
 
+$color-bg-gray: #f0f0f0;
+
 $transparent: rgba(#fff, 0);
 $color-text-main: #303030;
+$color-text-soft: #777;
