--- a/src/scss/_export-kbl.scss
+++ b/src/scss/_export-kbl.scss
@@ -1,2 +1,5 @@
 @import './kbl/button';
 @import './kbl/kbl-nav-logo';
+@import './kbl/header-icon';
+@import './kbl/form';
+@import './kbl/person-card';
