--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -1,5 +1,6 @@
 // Border Radii
 $btn-radius: 4px;
+$border-radius: 4px;
 
 // Transition Times
 $time-slow: 0.35s;
@@ -10,3 +11,5 @@ $time-fast: 0.2s;
 $font-weight-light: 400;
 $font-weight-medium: 600;
 $font-weight-heavy: 700;
+
+$navbar-height: 102px;
