--- a/src/views/pages/contact/contact.njk
+++ b/src/views/pages/contact/contact.njk
@@ -7,7 +7,7 @@
 <!--<![endif]-->
 <!--I can write -->
 {% from "universal/_header.njk" import header %}
-{{ header("future_member") }}
+{{ header() }}
 
 <body class="auth-theme-rashmore">
   {% from "universal/_navbar.njk" import navbar %}
@@ -23,7 +23,7 @@
   <div class="auth-breadcrumb-wrap">
       <div class="container">
           <ol class="breadcrumb sabbi-breadcrumb list-unstyled list-inline">
-              <li><a href="/">Home</a></li>
+              <li><a href="/" class="kbl-link">Home</a></li>
               <li class="active">Contact</li>
           </ol>
       </div>
@@ -34,7 +34,7 @@
               <div class="col-sm-8">
                   <p class="future_member-text" style="text-align: justify;">
                       If you would like to join us, we are always looking for <b>independently-funded research fellows</b> or
-                      <b>extended visitors</b>. Please use the <a href="#enroll"><u>form</u></a> below to explore our options.
+                      <b>extended visitors</b>. Please use the <a href="/contact#enroll" class="kbl-link">form</a> below to explore our options.
                       <b>Summer student</b> positions are also available for up to a 3 - 4 month period.
 
                   </p>
@@ -53,9 +53,9 @@
                                           as well as experience in supervised learning and
                                            unsupervised learning (Bayesian-based).
                                           Students will need to demonstrate adaptability to the multidisciplinary nature of our projects. Masters and honors students are
-                                          encouraged to <a href="#enroll"><u>contact</u></a> Dr. Kaundal to express interest.
-                                          <b>Both degree options in either the <a target="_blank" href="https://cs.usu.edu/">Department of Computer Science</a>
-                                              or <a target="_blank" href="https://psc.usu.edu/">Department of Plants, Soils & Climate</a> are available.</b></p>
+                                          encouraged to <a href="/contact#enroll" class="kbl-link">contact</a> Dr. Kaundal to express interest.
+                                          <b>Both degree options in either the <a target="_blank" rel="noreferrer noopen" href="https://cs.usu.edu/" class="kbl-link">Department of Computer Science</a>
+                                              or <a target="_blank" rel="noreferrer noopen" href="https://psc.usu.edu/" class="kbl-link">Department of Plants, Soils & Climate</a> are available.</b></p>
                   <div class="__fm_seg" id="join_reaserch_ln">
                       <figure class="future_member-figure">
                           <img src="assets/img/colorful.JPG"  alt="" class="img-responsive">
@@ -65,8 +65,8 @@
                                                       both to domestic and international students. Knowledge or experience in using scripting languages (Perl, Python) and
                                                       statistical/mathematical toolkits (R, Matlab) with some kind of programming experience in
                                                       any C, C++, or Java is preferable.
-                                                      <b>Both degree options in either the <a target="_blank" href="https://cs.usu.edu/">Department of Computer Science</a>
-                                                          or <a target="_blank" href="https://psc.usu.edu/">Department of Plants, Soils & Climate</a> are available.</b>
+                                                      <b>Both degree options in either the <a target="_blank" href="https://cs.usu.edu/" class="kbl-link">Department of Computer Science</a>
+                                                          or <a target="_blank" href="https://psc.usu.edu/" class="kbl-link">Department of Plants, Soils & Climate</a> are available.</b>
                                                   </p>
 
                      <h3 class="__fm_title" >Key criteria</h3>
@@ -82,13 +82,14 @@
                                                           An overall IELTS score of 6.0+ with a
                                                           minimum score of 5 in each band is preferable. This can be subtituted with a TOEFL
                                                           score of 79+.
-                                                          For more details on eligibility, please visit the USU graduate school <a target="_blank" href="https://gradschool.usu.edu/apply/">website</a>. </p>
+                                                          For more details on eligibility, please visit the USU graduate school
+                                                          <a target="_blank" href="https://gradschool.usu.edu/apply/" class="kbl-link">website</a>. </p>
                   </div>
                   <div class="__fm_seg">
                      <h2 class="font-md__x stage-vrb-title">Postdoctoral Research Fellow</h2>
                      <p style="text-align: justify;">A postdoctoral research fellow with strong research and publication records in the area
                                                       of bioinformatics and computational biology is encouraged to
-                                                      directly contact <a href="people/rakesh">Dr. Kaundal</a> to express interest.</p>
+                                                      directly contact <a href="people/rakesh" class="kbl-link">Dr. Kaundal</a> to express interest.</p>
 
                      <h3 class="__fm_title" id="enroll">Key criteria</h3>
                      <p style="text-align: justify;" class="future_member-text">A PhD in one or
@@ -118,7 +119,7 @@
                           <div class="row">
 
                               <div class="col-sm-6 col-sm-offset-3 text-center">
-                                  <button type="submit" class="btn btn-gules">Send Message</button>
+                                  <button type="submit" class="btn kbl-btn-1-solid">Send Message</button>
                               </div>
                           </div>
                       </div>
@@ -145,7 +146,7 @@
                               <p class="__ci_num">E-mail: <span>rkaundal@usu.edu</span></p>
                       </footer>
                   </address><!-- /.addr_future_memb -->
-                  <a href="#enroll" class="btn btn-gules">Request For Future Member</a>
+                  <a href="#enroll" class="btn kbl-btn-1-solid text-left">Request For Future Member</a>
               </aside>
           </div>
       </div>
