--- a/src/views/universal/_navbar-options.njk
+++ b/src/views/universal/_navbar-options.njk
@@ -58,7 +58,7 @@
 {% set contact = { name: "Contact", options: [], link: "/contact" } %}
 {% set news = { name: "News", options: [], link: "/news" } %}
 
-{% set navOptions = [home, research, people, publications, tools, events, contact, news] %}
+{% set navOptions = [home, research, people, publications, tools, events, news] %}
 
 {% macro calcDropdown(array) %}
   {% if array.length %}
