--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -8,23 +8,28 @@
   {% from "universal/_navbar-bs4.njk" import navbar %}
   {{ navbar("News") }}
 
-  <header class="kbl-header sabbi-page-header page-header-lg">
-      <div class="page-header-content conternt-center">
-          <div class="header-title-block">
-              <h1 class="page-title green-text">News</h1>
-          </div>
-      </div>
-  </header>
-  <div class="auth-breadcrumb-wrap">
-      <div class="container">
-          <ol class="breadcrumb sabbi-breadcrumb list-unstyled list-inline">
-              <li class="breadcrumb-item"><a href="/">Home</a></li>
-              <li class="breadcrumb-item active">News</li>
-          </ol>
-      </div>
-  </div><!-- /.auth-breadcrumb-wrap -->
+  <!--
+  {% from "components/img-header.njk" import imgHeader %}
+  {{ imgHeader("News") }}
 
-  <article class="container-fluid py-5 mb-5">
+  {% from "components/breadcrumb.njk" import breadcrumb %}
+  {{ breadcrumb([ {name: "Home", location: "/"}, {name: "News", location: ""} ]) }}
+-->
+  <article class="container-fluid kbl-top">
+    <div class="row justify-content-center pt-4">
+      <div class="col-auto">
+        <h1><ion-icon name="newspaper-outline" class="kbl-header-icon"></ion-icon></h1>
+      </div>
+      <div class="col-auto pt-3 header-icon-wrapper">
+        <h1>News</h1>
+        <h6>
+          See what the KAABiL is up to
+        </h6>
+      </div>
+    </div>
+  </article>
+
+  <article class="container-fluid pb-5 pt-1 mb-5">
     <div class="row flex-row">
 
       <!-- News - General -->
@@ -34,7 +39,7 @@
         </div>
 
         <section class="row news-item-container">
-          <a class="news-item col-12" href="/news/deephpi">
+          <a class="news-item col-12" href="/news/citsatdb">
             <div class="row pl-0">
               <div class="col-3 pl-0 my-auto">
                 <img src="/assets/img/events/IMG_20200113_151858.jpg" class="img-fluid">
@@ -50,7 +55,7 @@
         </section>
 
         <section class="row news-item-container">
-          <a class="news-item col-12" href="/news/deephpi">
+          <a class="news-item col-12" href="/news/newadmin1">
             <div class="row pl-0">
               <div class="col-9 pt-3">
                 <h5 class="header">New HPC Admin: Shelby McCowan</h5>
@@ -66,7 +71,7 @@
         </section>
 
         <section class="row news-item-container">
-          <a class="news-item col-12" href="/news/deephpi">
+          <a class="news-item col-12" href="/news/newgra1">
             <div class="row pl-0">
               <div class="col-3 pl-0 my-auto">
                 <img src="/assets/img/profile/akshat.jpeg" class="img-fluid">
