--- a/src/views/pages/research/lab-research/lab-research.njk
+++ b/src/views/pages/research/lab-research/lab-research.njk
@@ -167,7 +167,7 @@
                           </div>
                       </div>
                       <button class="btn btn-primary leftLst">
-                          <</button> <button class="btn btn-primary rightLst">>
+                          </button> <button class="btn btn-primary rightLst">
                       </button>
                   </div>
 
@@ -205,7 +205,7 @@
                           <h2 class="stage-title font-md lil-line">KAABiL group is one of Utah’s</h2>
                           <p class="stage-halfbol_text">leading bioinformatics lab. To date, Dr. Kaundal has trained more than 10 graduate and 10 undergrad
                           students, 1 postdoctoral fellow, and 3 full-time bioinformatics staff members in his career research program.</p>
-                          <a href="future_member.html#enroll" class="btn btn-action btn-gules">Join Research</a>
+                          <a href="/contact#enroll" class="btn kbl-btn-1-solid">Join Research</a>
                       </aside>
                   </div>
               </div>
