--- a/src/views/universal/_footer-scripts.njk
+++ b/src/views/universal/_footer-scripts.njk
@@ -18,10 +18,17 @@
   <script src="assets/tools/dropdownhover/js/bootstrap-dropdownhover.min.js"></script>
   <script src="assets/js/vendor/bootstrap.min.js"></script>
 {% endif %}
+<script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 <!-- site-spec -->
 <script src="assets/js/plugins.js"></script>
 <script src="assets/js/main.js"></script>
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+<!-- To stop videos playing after modal is closed -->
+<script>
+$('#videoModal').on('hidden.bs.modal', function () {
+    $("#videoModal iframe").attr("src", $("#videoModal iframe").attr("src"));
+});
+</script>
 {% if customJS %}
 <script>
     (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
