--- a/src/views/universal/_navbar-bs4.njk
+++ b/src/views/universal/_navbar-bs4.njk
@@ -2,31 +2,35 @@
 
 {% macro navbar(activePage="", activeSubpage="") %}
 
-<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top shadow-md bs4" style="background: #fff!important;">
   <article class="container-fluid px-5">
     <section class="row px-5 w-100 mb-1">
-      <div class="col-3 pl-5">
+
+      <div class="col-4 pl-5">
         <a class="navbar-brand d-inline" href="#">
           <img src="/assets/img/kbllogo.png">
         </a>
       </div>
-      <div class="col-9 mt-auto pr-5">
+
+      <div class="col-8 mt-auto pr-5">
+
         <section class="row pb-4">
           <div class="col-12 text-right">
             <a class="kbl-btn-1" target="_blank" rel="noopener noreferrer" href="http://bioinfo.usu.edu/covidTracker/">
                 Covid 19 Tracker
             </a>
-            <a class="kbl-btn-1" href="#enroll">
-                Join Research
+            <a class="kbl-btn-1 ml-2" href="/contact#enroll">
+                Contact Us!
             </a>
           </div>
         </section>
+
         <section class="row">
           <div class="col-12 text-right">
             {% from "./_navbar-options.njk" import navOptions, calcDropdown, anchorGenBS4, toolAnchorGenBS4 %}
 
             {% for option in navOptions %}
-              <span class="col {{ calcDropdown(option.options)}} {{ currentRoute(option.name, activePage) }}">
+              <span class="bs4 col {{ calcDropdown(option.options)}} {{ currentRoute(option.name, activePage) }}">
                   {{ anchorGenBS4(option.name, option.options, option.link) }}
                   {% if option.options %}
                   <div class="dropdown-menu bs4 nav-dropdown mt-2">
@@ -39,7 +43,9 @@
             {% endfor %}
           </div>
         </section>
+
       </div>
+
     </section>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
