--- a/src/views/universal/_navbar.njk
+++ b/src/views/universal/_navbar.njk
@@ -33,7 +33,7 @@
               <a class="kbl-btn-1" target="_blank" rel="noopener noreferrer" href="http://bioinfo.usu.edu/covidTracker/">
                   Covid 19 Tracker
               </a>
-              <a class="kbl-btn-1" href="#enroll">
+              <a class="kbl-btn-1" href="#enroll" style="margin-left: 15px!important;">
                   Join Research
               </a>
           </div>
