Many changes again

--- a/src/scss/_export-kbl.scss
+++ b/src/scss/_export-kbl.scss
@@ -3,3 +3,5 @@
 @import './kbl/header-icon';
 @import './kbl/form';
 @import './kbl/person-card';
+@import './kbl/header-bar';
+@import './kbl/heading';
