--- a/src/views/pages/tools/tools.njk
+++ b/src/views/pages/tools/tools.njk
@@ -6,13 +6,29 @@
 <html class="no-js" lang="en">
 <!--<![endif]-->
 <!--I can write -->
+{% set bs4=true %}
 {% from "universal/_header.njk" import header %}
-{{ header("events") }}
+{{ header("events", bs4=bs4) }}
 
-<body class="auth-theme-rashmore">
-  {% from "universal/_navbar.njk" import navbar %}
+<body>
+  {% from "universal/_navbar-bs4.njk" import navbar %}
   {{ navbar("Tools") }}
 
+  <article class="container-fluid kbl-top">
+    <div class="row justify-content-center pt-4">
+      <div class="col-auto">
+        <h1><ion-icon name="cube-outline" class="kbl-header-icon"></ion-icon></h1>
+      </div>
+      <div class="col-auto pt-3 header-icon-wrapper">
+        <h1>Tools</h1>
+        <h6>
+          Services straight from students at KAABiL
+        </h6>
+      </div>
+    </div>
+  </article>
+
+  <!--
   <header class="sabbi-page-header-classic1 sabbi-page-header-team page-header-lg">
           <div class="page-header-content conternt-center">
               <div class="header-title-block">
@@ -27,7 +43,8 @@
               <li class="active"><a href="#">Tools</a></li>
           </ol>
       </div>
-  </div><!-- /.auth-breadcrumb-wrap -->
+  </div>
+-->
   <section class="sabbi-section stage_events_post">
   <div class="wrapper">
           <nav class="tabs">
@@ -321,7 +338,7 @@
 
   {% include "universal/_footer.njk" %}
   {% from "universal/_footer-scripts.njk" import scripts %}
-  {{ scripts() }}
+  {{ scripts(bs4=bs4) }}
 </body>
 
 </html>
