--- a/pages/lab_research/lab_research.css
+++ b/pages/lab_research/lab_research.css
@@ -9,39 +9,43 @@ hr {
 }
 
 .MultiCarousel {
-  float: left;
-  overflow: hidden;
-  /* padding: 15px; */
-  width: 100%;
-  position: relative;
+    float: left;
+    overflow: hidden;
+    /* padding: 15px; */
+    width: 100%;
+    position: relative;
 }
 
 .MultiCarousel .MultiCarousel-inner {
-  transition: 1s ease all;
-  float: left;
+    transition: 1s ease all;
+    float: left;
 }
 
 .MultiCarousel .MultiCarousel-inner .item {
-  float: left;
+    float: left;
 }
 
 .MultiCarousel .leftLst,
 .MultiCarousel .rightLst {
-  position: absolute;
-  border-radius: 50%;
-  top: calc(50%);
+    position: absolute;
+    border-radius: 50%;
+    top: calc(50%);
 }
 
 .MultiCarousel .leftLst {
-  left: 0;
+    left: 0;
 }
 
 .MultiCarousel .rightLst {
-  right: 0;
+    right: 0;
 }
 
 .MultiCarousel .leftLst.over,
 .MultiCarousel .rightLst.over {
-  pointer-events: none;
-  background: #ccc;
+    pointer-events: none;
+    background: #ccc;
+}
+
+.fix-picture {
+  transform: scale(1.1) translate(45px, 20px);
 }
