--- a/src/views/components/breadcrumb.njk
+++ b/src/views/components/breadcrumb.njk
@@ -1,7 +1,7 @@
 {% macro breadcrumb(links=[]) %}
   {% set lastIndex = links.length - 1 %}
-  <div class="container">
-    <ol class="breadcrumb">
+  <div class="container-fluid mx-0 px-0">
+    <ol class="breadcrumb" style="padding-left: 300px!important;">
       {% for link in links %}
         {% if loop.last %}
           <li class="breadcrumb-item active">{{ link.name }}</li>
