--- a/src/views/universal/_navbar-bs4.njk
+++ b/src/views/universal/_navbar-bs4.njk
@@ -27,13 +27,14 @@
 
         <section class="row">
           <div class="col-12 text-right">
-            {% from "./_navbar-options.njk" import navOptions, calcDropdown, anchorGenBS4, toolAnchorGenBS4 %}
+            {% from "./_navbar-options.njk" import navOptions, calcDropdown, anchorGenBS4, toolAnchorGenBS4, genHeaderLink %}
 
             {% for option in navOptions %}
               <span class="bs4 col {{ calcDropdown(option.options)}} {{ currentRoute(option.name, activePage) }}">
                   {{ anchorGenBS4(option.name, option.options, option.link) }}
                   {% if option.options %}
                   <div class="dropdown-menu bs4 nav-dropdown mt-2">
+                    {{ genHeaderLink(option.name, option.link) }}
                     {% for subOption in option.options %}
                      {{ toolAnchorGenBS4(subOption.name, subOption.link, option.name, "dropdown-item nav-dropdown-item py-2 {{ activeSubroute(subOption.name, activeSubpage) }}") }}
                     {% endfor %}
