--- a/src/views/pages/people/our-team/team-data.njk
+++ b/src/views/pages/people/our-team/team-data.njk
@@ -11,7 +11,11 @@
       Her sequence analysis comprises of genome assembly, RNA-seq,
       Bisulfite_seq, and SNP analysis.",
     email: "rousselene.larson@usu.edu",
-    img: ""
+    img: "assets/img/profile/2.jpg",
+    social: [
+      {type: "twitter", link: "https://twitter.com/rousselene"},
+      {type: "linkedin", link: "https://www.linkedin.com/feed/"}
+    ]
   }
 %}
 
@@ -26,7 +30,7 @@
       information processing from Harbin Engineering University, China, in 2014. His research interests
       include computer vision, ML, and their applications in intelligent transportation systems and smart agricultural systems.",
     email: "kg.zhang@aggiemail.usu.edu",
-    img: "",
+    img: "assets/img/profile/Kaige Zhang.jpg",
     social: []
   }
 %}
@@ -38,7 +42,7 @@
     type: "Graduate",
     bio: "Cristian is a Plant Science MS student from Colombia. After completing his BS (Computer Science: Universidad del Valle; Cali, Colombia), he worked as a Research Assistant at CIAT(CGIAR) and the Colombian Sugarcane Research Center before joining the Kaundal Bioinformatics Laboratory. After his graduation, he plans to go back to Colombia to join his family, then pursue a Ph.D. to become a professor.",
     email: "cdloaiza@aggiemail.usu.edu",
-    img: "asfh",
+    img: "assets/img/profile/loaiza orduz-cristian.jpg",
     social: []
   }
 %}
@@ -50,7 +54,7 @@
     type: "Graduate",
     bio: "",
     email: "naveen.duhan@usu.edu",
-    img: "asfh",
+    img: "assets/img/profile/1.jpg",
     social: []
   }
 %}
@@ -62,7 +66,7 @@
     type: "Graduate",
     bio: "",
     email: "suyash.mhetre@aggiemail.usu.edu",
-    img: "asfh",
+    img: "assets/img/profile/suyash.jpg",
     social: []
   }
 %}
@@ -74,8 +78,32 @@
     type: "Graduate",
     bio: "Nikhil is a Computer Science graduate student at USU. His bachelor's degree is in Information Technology from Osmania University, India. His research focus is in Bioinformatics. He is currently working on deep learning, developing prediction models for subcellular localization in human and arabidopsis genome and creating an SSR prediction database. He is also actively studying algorithms and event-driven programming.",
     email: "nikhil.sai.kurivella@aggiemail.usu.edu",
-    img: "asfh",
+    img: "assets/img/profile/nikhil.jpg",
     social: []
+  }
+%}
+
+{% set matt = {
+    name: "Matthew Lister",
+    subtitle: "HPC Administrator | CS",
+    modifier: "Matthew",
+    type: "Graduate",
+    bio: "Matthew is the systems administrator of the high performance cluster for the bioinformatics group. A passionate Linux enthusiast, his work includes bioinformatics programming and teaching Linux to new users. Matthew is starting an MS in Computer Science this spring and hopes to add a Master's in statistics to his plan of study.",
+    email: "matthew.lister@aggiemail.usu.edu",
+    img: "assets/img/profile/mat.jfif",
+    social: []
+  }
+%}
+
+{% set shelby = {
+    name: "Shelby McCowan",
+    subtitle: "HPC Administrator | BSc Biochemistry",
+    modifier: "Shelby",
+    type: "Undergraduate",
+    bio: "Shelby is a Biochemistry major who aspires to go into software engineering. He has worked with mobile apps, websites (including the front and back end), and desktop applications. He is a percussionist in his spare time.",
+    email: "itsme@shelbymccowan.com",
+    img: "assets/img/profile/shelby.jpg",
+    social: [{type:"twitter", link: "https://twitter.com/ShelbyMccowan"}]
   }
 %}
 
@@ -91,26 +119,38 @@
   }
 %}
 
-{% set matt = {
-    name: "Matthew Lister",
-    subtitle: "HPC Administrator | CS",
-    modifier: "Matthew",
-    type: "Graduate",
-    bio: "Matthew is the systems administrator of the high performance cluster for the bioinformatics group. A passionate Linux enthusiast, his work includes bioinformatics programming and teaching Linux to new users. Matthew is starting an MS in Computer Science this spring and hopes to add a Master's in statistics to his plan of study.",
-    email: "matthew.lister@aggiemail.usu.edu",
-    img: "asfh",
+{% set udarika = {
+    name: "Udarika Ediriweera",
+    subtitle: "",
+    modifier: "Udarika",
+    type: "Alumni",
+    bio: "",
+    email: "",
+    img: "assets/img/profile/UDARIKA-EDIRIWEERA.jpg",
     social: []
   }
 %}
 
-{% set shelby = {
-    name: "Shelby McCowan",
-    subtitle: "HPC Administrator | BSc Biochemistry",
-    modifier: "Shelby",
-    type: "Undergraduate",
-    bio: "Shelby is a Biochemistry major who aspires to go into software engineering. He has worked with mobile apps, websites (including the front and back end), and desktop applications. He is a percussionist in his spare time.",
-    email: "itsme@shelbymccowan.com",
-    img: "asfh",
+{% set raul = {
+    name: "Raul Ramirez",
+    subtitle: "",
+    modifier: "Raul",
+    type: "Alumni",
+    bio: "",
+    email: "",
+    img: "assets/img/profile/profile_pic.jpeg",
+    social: []
+  }
+%}
+
+{% set caleb = {
+    name: "Caleb Smith",
+    subtitle: "",
+    modifier: "Caleb",
+    type: "Alumni",
+    bio: "",
+    email: "",
+    img: "assets/img/profile/profile_pic.jpeg",
     social: []
   }
 %}
@@ -118,3 +158,8 @@
 <!-- Missing - Udarika Ediriweera, Raul Ramirez, Caleb Smith -->
 
 {% set staff = [roussie, kaige, cristian, naveen, suyash, nikhil, matt, shelby] %}
+
+{% set bioinfoStaff = [roussie, kaige] %}
+{% set gradStudents = [cristian, naveen, suyash, nikhil, matt] %}
+{% set undergradStudents = [shelby] %}
+{% set alumni = [udarika, raul, caleb] %}
