--- a/src/views/pages/research/research-articles/research-articles.njk
+++ b/src/views/pages/research/research-articles/research-articles.njk
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!-->
+{% set bs4 = true %}
 <html class="no-js" lang="en">
-<!--<![endif]-->
-<!--I can write -->
 {% from "universal/_header.njk" import header %}
-{{ header() }}
+{{ header(bs4=bs4) }}
 
 <body class="auth-theme-rashmore">
-  {% from "universal/_navbar.njk" import navbar %}
+  {% from "universal/_navbar-bs4.njk" import navbar %}
   {{ navbar("Research", "Research Articles") }}
 
+  <!--
   <header class="kbl-header research sabbi-page-header page-header-lg">
       <div class="page-header-content conternt-center">
           <div class="header-title-block">
@@ -27,7 +23,23 @@
               <li class="active"><a href="#">Research Articles</a></li>
           </ol>
       </div>
-  </div><!-- /.auth-breadcrumb-wrap -->
+  </div>
+-->
+
+<article class="container-fluid kbl-top">
+  <div class="row justify-content-center pt-4">
+    <div class="col-auto">
+      <h1><ion-icon name="document-text-outline" class="kbl-header-icon"></ion-icon></h1>
+    </div>
+    <div class="col-auto pt-3 header-icon-wrapper text-left">
+      <h1>Research Articles</h1>
+      <h6>
+        Research from our lab
+      </h6>
+    </div>
+  </div>
+</article>
+
   <section class="sabbi-section stage_events_post stage_events_post-single">
       <div class="container">
               <div class="events_post_single-sagment tabcontent" id="ai" style="display: none;">
@@ -220,7 +232,7 @@
 
   {% include "universal/_footer.njk" %}
   {% from "universal/_footer-scripts.njk" import scripts %}
-  {{ scripts() }}
+  {{ scripts(bs4=bs4) }}
 </body>
 
 </html>
